<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.lollipop.clip.RoundClipLayout
        android:id="@+id/itemClipLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:id="@+id/itemContentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="12dp"
                android:textSize="12sp"
                tools:text="@string/app_name" />

            <com.lollipop.lqrdemo.creator.content.SimpleTextInputView
                android:id="@+id/textInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_input_value"
                android:paddingHorizontal="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                tools:text="@string/title_about" />

        </LinearLayout>

        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            tools:background="@android:color/darker_gray" />
    </com.lollipop.clip.RoundClipLayout>

</FrameLayout>