<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/positionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/leftTopPositionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="6dp"
                android:checked="false"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/position_left_top"
                android:textSize="14sp"
                tools:background="#3f00" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/rightTopPositionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="6dp"
                android:checked="false"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/position_right_top"
                android:textSize="14sp"
                tools:background="#3f00" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/leftBottomPositionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="6dp"
                android:checked="false"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/position_left_bottom"
                android:textSize="14sp"
                tools:background="#3f00" />

        </LinearLayout>
    </HorizontalScrollView>


    <HorizontalScrollView
        android:id="@+id/cornerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/positionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="6dp"
                android:checked="false"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/position_left_top"
                android:textSize="14sp"
                tools:background="#3f00" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>