<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".other.AboutActivity">

    <FrameLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_about"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            app:fontFamily="@font/font_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="?attr/colorOnBackground" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lollipop.clip.SquircleClipLayout
            android:id="@+id/logoView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:radius="30dp"
            app:radiusWeight="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo"
                tools:background="@android:color/holo_red_dark"
                tools:tint="@android:color/white" />
        </com.lollipop.clip.SquircleClipLayout>

        <TextView
            android:id="@+id/versionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/logoView"
            app:layout_constraintStart_toStartOf="@id/logoView"
            app:layout_constraintTop_toBottomOf="@id/logoView"
            tools:text="v1.0.0" />

        <TextView
            android:id="@+id/andrewView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art_guidance"
            app:layout_constraintBottom_toTopOf="@id/lollipopView"
            app:layout_constraintEnd_toEndOf="@id/versionView"
            app:layout_constraintStart_toStartOf="@id/versionView"
            app:layout_constraintTop_toBottomOf="@id/versionView"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/lollipopView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            app:layout_constraintBottom_toBottomOf="@id/copyrightView"
            app:layout_constraintEnd_toEndOf="@id/andrewView"
            app:layout_constraintStart_toStartOf="@id/andrewView"
            app:layout_constraintTop_toBottomOf="@id/andrewView" />

        <TextView
            android:id="@+id/copyrightView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/versionView"
            app:layout_constraintStart_toStartOf="@id/versionView"
            app:layout_constraintTop_toBottomOf="@id/lollipopView"
            tools:text="copyrightView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>