<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/touchHoldView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8888" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lollipop.clip.RoundClipLayout
            android:id="@+id/previewCard"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:background="?attr/colorBackgroundFloating"
            android:elevation="15dp"
            android:radius="20dp"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent">

        </com.lollipop.clip.RoundClipLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.lollipop.clip.RoundClipLayout
        android:id="@+id/infoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundFloating"
        android:elevation="20dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:leftTop="20dp"
        app:rightTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:leftTop="20dp">

            <com.lollipop.widget.RoundBackgroundView
                android:id="@+id/touchHolder"
                android:layout_width="80dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:alpha="0.5"
                app:color="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:round_type="smaller" />

            <com.lollipop.clip.RoundClipLayout
                android:id="@+id/charsetButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:radius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/touchHolder">

                <TextView
                    android:id="@+id/charsetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3f00"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/garbled"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="12sp" />
            </com.lollipop.clip.RoundClipLayout>

            <TextView
                android:id="@+id/barcodeTypeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@id/charsetButtonGroup"
                app:layout_constraintEnd_toStartOf="@id/charsetButtonGroup"
                app:layout_constraintTop_toTopOf="@id/charsetButtonGroup"
                tools:text="QRCode" />

            <TextView
                android:id="@+id/hintView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingHorizontal="16dp"
                android:paddingTop="4dp"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/charsetButtonGroup"
                tools:text="驾照" />

            <TextView
                android:id="@+id/contentValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="26dp"
                android:textColor="?attr/colorOnBackground"
                android:textIsSelectable="true"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/hintView"
                tools:text="afgajsdgfajhsgdfjahsgfjashdgfaksjfghajsdfgajsafgajsdgfajhsgdfjahsgfjashdgfaksjfghajsdfgajs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentValueView">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shareButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textColor="?attr/colorOnBackground"
                    app:icon="@drawable/ic_baseline_share_24"
                    app:iconGravity="textTop"
                    app:iconTint="?attr/colorOnBackground" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copyButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/copy"
                    android:textColor="?attr/colorOnBackground"
                    app:icon="@drawable/ic_baseline_content_copy_24"
                    app:iconGravity="textTop"
                    app:iconTint="?attr/colorOnBackground" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/openButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open"
                    android:textColor="?attr/colorOnBackground"
                    app:icon="@drawable/ic_outline_arrow_circle_right_24"
                    app:iconGravity="textTop"
                    app:iconTint="?attr/colorOnBackground" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.lollipop.clip.RoundClipLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>